terraform/03_securitygroups.tf
# ALB Security Group (Traffic Internet -> ALB)
resource "aws_security_group" "load-balancer"{
  name = "load_balancer_security_group"
  description = "Controls access to the ALB"
  vpc_id = aws_vpc.production-vpc.id

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# ECS Security group (traffic ALB -> ECS)
resource "aws_security_group" "ecs" {
  name = "ecs_security_group"
  description = "Allows inbound access from the ALB only"
  vpc_id = aws_vpc.production-vpc.id

  ingress {
    from_port = 0
    protocol = "-1"
    to_port = 0
    security_groups = [aws_security_group.load-balancer.id]
  }

  egress {
    from_port = 0
    protocol = "-1"
    to_port = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# RDS Security group (traffic ECS -> RDS)
resource "aws_security_group" "rds" {
  name = "rds_security_group"
  description = "Allows inbound access from the ALB only"
  vpc_id = aws_vpc.production-vpc.id

  ingress {
    from_port = "5432"
    protocol = "tcp"
    to_port = "5432"
    security_groups = [aws_security_group.ecs.id]
  }

  egress {
    from_port = 0
    protocol = "-1"
    to_port = 0
    cidr_blocks = [
      "0.0.0.0/0"]
  }

}
